--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.0",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/moment": "^4.3.0",
+    "@fullcalendar/moment-timezone": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@fullcalendar/vue": "^4.3.1",
     "@tinymce/tinymce-vue": "^2.1.0",
     "axios": "0.18.*",
     "bootstrap": "^4.2.1",
@@ -83,11 +90,8 @@
     "copy": "node_modules/webpack/bin/webpack.js --progress --config=webpack.config.copy.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/benheu/wappointment.git"
+    "type": "git"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/benheu/wappointment#readme"
+  "license": "GPLv2"
 }
