fixed installation issue permissions mysql

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "illuminate/support": "5.5.40",
         "illuminate/filesystem": "5.5.40",
         "illuminate/http": "5.5.40",
-        "symfony/event-dispatcher": "^3.4",
+        "symfony/event-dispatcher": "3.4.*",
+        "symfony/debug": "3.4.*",
+        "symfony/translation": "3.4.*",
         "guzzlehttp/guzzle": "^6.3",
         "sabre/vobject": "^4.1",
         "rakit/validation": "^0.18.0",
