--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-brands-svg-icons": "^5.7.0",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@fullcalendar/core": "^4.3.1",
@@ -37,7 +38,7 @@
     "vue-form-generator": "^2.3.3",
     "vue-full-calendar": "^2.7.0",
     "vue-range-slider": "^0.6.0",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
