--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tinymce/tinymce-vue": "^2.1.0",
     "axios": "0.18.*",
     "bootstrap": "^4.2.1",
+    "browser-info": "^1.2.0",
     "calendar-js": "^1.4.4",
     "copy-to-clipboard": "^3.2.0",
     "jquery": "^3.4.1",
