--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "achse/php-math-interval": "~3.0.3",
         "soundasleep/html2text": "^0.5.0",
         "giggsey/libphonenumber-for-php": "^8.10",
-        "egulias/email-validator": "^2.1"
+        "egulias/email-validator": "^2.1",
+        "doctrine/dbal": "^2.10"
     },
     "autoload": {
         "psr-4": {
