--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "type": "worpdress-plugin",
     "require": {
         "php": ">=7.0.0",
-        "illuminate/database": "5.5.40",
-        "illuminate/support": "5.5.40",
-        "illuminate/filesystem": "5.5.40",
-        "illuminate/http": "5.5.40",
+        "illuminate/database": "5.5.*",
+        "illuminate/support": "5.5.*",
+        "illuminate/filesystem": "5.5.*",
+        "illuminate/http": "5.5.*",
         "symfony/event-dispatcher": "3.4.*",
         "symfony/debug": "3.4.*",
         "symfony/translation": "3.4.*",
