--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "soundasleep/html2text": "^0.5.0",
         "giggsey/libphonenumber-for-php": "^8.10",
         "egulias/email-validator": "^2.1",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "2.5.13"
     },
     "autoload": {
         "psr-4": {
