--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "vue-form-generator": "^2.3.3",
     "vue-full-calendar": "^2.7.0",
     "vue-range-slider": "^0.6.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
