--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "giggsey/libphonenumber-for-php": "^8.10",
         "egulias/email-validator": "^2.1",
         "doctrine/dbal": "2.5.13",
-        "pelago/emogrifier": "^3.1"
+        "pelago/emogrifier": "^3.1",
+        "symfony/css-selector": "3.4.*"
     },
     "autoload": {
         "psr-4": {
