--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,23 @@
         "symfony/debug": "3.4.*",
         "symfony/translation": "3.4.*",
         "guzzlehttp/guzzle": "^6.3",
-        "sabre/vobject": "^4.1",
         "rakit/validation": "^0.18.0",
         "nesbot/carbon": "~1.37.0",
         "achse/php-math-interval": "~3.0.3",
         "soundasleep/html2text": "^0.5.0",
         "giggsey/libphonenumber-for-php": "^8.10",
-        "egulias/email-validator": "^2.1",
+        "egulias/email-validator": "2.1.14",
         "doctrine/dbal": "2.5.13",
         "pelago/emogrifier": "^3.1",
-        "symfony/css-selector": "3.4.*"
+        "symfony/css-selector": "3.4.*",
+        "sabre/uri": "2.1.3",
+        "sabre/xml": "2.1.3",
+        "sabre/vobject": "4.2.2",
+        "doctrine/inflector": "1.2.0",
+        "doctrine/lexer": "1.0.2",
+        "doctrine/annotations": "1.4.0",
+        "doctrine/cache": "1.6.2",
+        "doctrine/collections": "1.4.0"
     },
     "autoload": {
         "psr-4": {
