--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "doctrine/lexer": "1.0.2",
         "doctrine/annotations": "1.4.0",
         "doctrine/cache": "1.6.2",
-        "doctrine/collections": "1.4.0"
+        "doctrine/collections": "1.4.0",
+        "illuminate/pagination": "5.5.*"
     },
     "autoload": {
         "psr-4": {
