--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-full-calendar": "^2.7.0",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.1.3",
+    "vue-sanitize": "^0.2.1",
     "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
