--- a/composer.json
+++ b/composer.json
@@ -4,30 +4,26 @@
     "type": "worpdress-plugin",
     "require": {
         "php": ">=7.0.0",
-        "illuminate/database": "5.5.*",
-        "illuminate/support": "5.5.*",
-        "illuminate/filesystem": "5.5.*",
-        "illuminate/http": "5.5.*",
-        "symfony/event-dispatcher": "3.4.*",
-        "symfony/debug": "3.4.*",
-        "symfony/translation": "3.4.*",
-        "guzzlehttp/guzzle": "^6.3",
-        "rakit/validation": "^0.18.0",
-        "nesbot/carbon": "~1.37.0",
+        "illuminate/database": "7.30.*",
+        "illuminate/support": "7.30.*",
+        "illuminate/http": "7.30.*",
+        "symfony/event-dispatcher": "5.3.*",
+        "symfony/debug": "4.4.*",
+        "guzzlehttp/guzzle": "^7.4",
+        "rakit/validation": "^1.4",
+        "nesbot/carbon": "^2.54",
         "soundasleep/html2text": "^0.5.0",
-        "egulias/email-validator": "2.1.14",
-        "doctrine/dbal": "2.5.13",
-        "pelago/emogrifier": "^3.1",
-        "symfony/css-selector": "3.4.*",
+        "doctrine/dbal": "^2.13",
+        "pelago/emogrifier": "^6.0",
+        "symfony/css-selector": "^5.3",
         "sabre/uri": "2.1.3",
         "sabre/xml": "2.1.3",
         "sabre/vobject": "4.2.2",
-        "doctrine/inflector": "1.2.0",
-        "doctrine/lexer": "1.0.2",
-        "doctrine/annotations": "1.4.0",
-        "doctrine/cache": "1.6.2",
-        "doctrine/collections": "1.4.0",
-        "illuminate/pagination": "5.5.*"
+        "doctrine/inflector": "^2.0",
+        "doctrine/annotations": "^1.13",
+        "doctrine/cache": "^2.1",
+        "doctrine/collections": "^1.6",
+        "illuminate/pagination": "7.30.*"
     },
     "autoload": {
         "psr-4": {
