--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "illuminate/support": "7.30.*",
         "illuminate/http": "7.30.*",
         "symfony/event-dispatcher": "5.3.*",
+        "symfony/translation": "5.3.*",
         "egulias/email-validator": "^3.1",
         "symfony/debug": "4.4.*",
-        "guzzlehttp/guzzle": "^7.4",
+        "guzzlehttp/guzzle": "^6.3",
         "rakit/validation": "^1.4",
-        "nesbot/carbon": "^2.54",
+        "nesbot/carbon": "^2.31",
         "soundasleep/html2text": "^0.5.0",
         "doctrine/dbal": "^2.13",
         "pelago/emogrifier": "^6.0",
