--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "doctrine/annotations": "1.4.0",
         "doctrine/cache": "1.6.2",
         "doctrine/collections": "1.4.0",
-        "illuminate/pagination": "5.5.*"
+        "illuminate/pagination": "5.5.*",
+        "true/punycode": "^2.1"
     },
     "autoload": {
         "psr-4": {
