--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         }
     },
     "require-dev": {
-        "phpcompatibility/php-compatibility": "^9.3"
+        "phpcompatibility/php-compatibility": "^9.3",
+        "consolidation/robo": "^3.0"
     }
 }
