--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.1",
     "css-loader": "^1.0.1",
+    "cypress": "^9.5.2",
     "expect": "^23.6.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -91,7 +92,8 @@
     "scss": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=webpack.config.scss.js",
     "analyze": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.analyze.js",
     "copy": "node_modules/webpack/bin/webpack.js --progress --config=webpack.config.copy.js",
-    "build": "npm run scss && npm run copy && npm run client:prod"
+    "build": "npm run scss && npm run copy && npm run client:prod",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git"
