--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         }
     },
     "require-dev": {
-        "phpcompatibility/php-compatibility": "^9.3"
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpstan/phpstan": "^1.8"
     }
 }
