--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/luxon": "^4.3.0",
     "@fullcalendar/moment": "^4.3.0",
     "@fullcalendar/moment-timezone": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
@@ -25,7 +26,6 @@
     "js-cookie": "^2.2.0",
     "libphonenumber-js": "^1.7.9",
     "lodash": "^4.17.21",
-    "luxon": "^3.2.1",
     "moment": "2.24.*",
     "moment-timezone": "0.5.*",
     "nouislider": "^11.1.0",
