--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/css-selector": "^5.3",
         "sabre/uri": "2.1.3",
         "sabre/xml": "2.1.3",
-        "sabre/vobject": "4.2.2",
+        "sabre/vobject": "^4.5",
         "doctrine/inflector": "^2.0",
         "doctrine/annotations": "^1.13",
         "doctrine/cache": "^2.1",
