--- a/composer.json
+++ b/composer.json
@@ -3,28 +3,21 @@
     "description": "Appointment manager for Wordpress",
     "type": "worpdress-plugin",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.3",
         "illuminate/database": "8.83.*",
         "illuminate/support": "8.83.*",
         "illuminate/http": "8.83.*",
         "symfony/event-dispatcher": "5.3.*",
-        "symfony/translation": "5.3.*",
         "egulias/email-validator": "^3.1",
-        "symfony/debug": "4.4.*",
         "guzzlehttp/guzzle": "^6.3",
         "rakit/validation": "^1.4",
         "nesbot/carbon": "^2.31",
         "soundasleep/html2text": "^0.5.0",
-        "doctrine/dbal": "^2.13",
         "pelago/emogrifier": "^6.0",
         "symfony/css-selector": "^5.3",
         "sabre/uri": "2.1.3",
         "sabre/xml": "2.1.3",
         "sabre/vobject": "^4.5",
-        "doctrine/inflector": "^2.0",
-        "doctrine/annotations": "^1.13",
-        "doctrine/cache": "^2.1",
-        "doctrine/collections": "^1.6",
         "illuminate/pagination": "8.83.*",
         "true/punycode": "^2.1"
     },
@@ -35,13 +28,11 @@
         "files": ["included/swiftmailer/swiftmailer/lib/swift_required.php"]
     },
     "require-dev": {
-        "phpcompatibility/php-compatibility": "^9.3",
-        "consolidation/robo": "^3.0",
-        "pestphp/pest": "^1.21"
+        "phpcompatibility/php-compatibility": "^9.3"
     },
     "config": {
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
+        "platform": {
+            "php": "7.3"
         }
     }
 }
