--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sabre/xml": "2.1.3",
         "sabre/vobject": "^4.5",
         "illuminate/pagination": "8.83.*",
-        "true/punycode": "^2.1"
+        "true/punycode": "^2.1",
+        "doctrine/dbal": "^3.3"
     },
     "autoload": {
         "psr-4": {
@@ -33,6 +34,9 @@
     "config": {
         "platform": {
             "php": "7.3"
+        },
+        "allow-plugins": {
+            "pestphp/pest-plugin": false
         }
     }
 }
