--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.1.3",
     "vue-sanitize": "^0.2.1",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "luxon3": "npm:luxon@3.x"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
