--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tiptap": "^0.20.1",
     "tiptap-extensions": "^0.23.0",
     "validator": "^13.7.0",
-    "vue": "^2.5.22",
+    "vue": "2.6.6",
     "vue-click-outside": "^1.0.7",
     "vue-color": "^2.7.0",
     "vue-draggable-resizable": "^1.7.5",
@@ -73,11 +73,11 @@
     "node-sass": "7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^10.5.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "2.6.6",
     "vue-test-utils": "^1.0.0-beta.11",
     "webpack": "^4.36.1",
     "webpack-assets-manifest": "^3.1.1",
