--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "nouislider": "^11.1.0",
     "replace-once": "^1.0.0",
     "systemjs": "^3.1.6",
-    "tiptap": "^0.20.1",
-    "tiptap-extensions": "^0.23.0",
+    "tiptap": "^1.32.2",
+    "tiptap-extensions": "^1.35.2",
     "validator": "^13.7.0",
     "vue": "2.6.6",
     "vue-click-outside": "^1.0.7",
@@ -93,6 +93,7 @@
     "scss": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=webpack.config.scss.js",
     "analyze": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.analyze.js",
     "copy": "node_modules/webpack/bin/webpack.js --progress --config=webpack.config.copy.js",
+    "patch-vendors": "node apply-vendor-patches.js",
     "build": "npm run scss && npm run copy && npm run client:prod",
     "cypress:open": "cypress open"
   },
