fix: php 8.1 notice

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "analyze": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.analyze.js",
     "copy": "node_modules/webpack/bin/webpack.js --progress --config=webpack.config.copy.js",
     "patch-vendors": "node apply-vendor-patches.js",
-    "build": "npm run scss && npm run copy && npm run client:prod",
+    "build": "npm run patch-vendors && npm run scss && npm run copy && npm run client:prod",
     "cypress:open": "cypress open"
   },
   "repository": {
