--- a/package.json
+++ b/package.json
@@ -1,105 +1,26 @@
 {
-  "name": "wappointment",
-  "version": "1.0.0",
-  "description": "",
+  "name": "wappointment-react",
+  "version": "3.0.0",
+  "description": "Wappointment React Admin Interface",
+  "scripts": {
+    "build": "webpack --mode production --config=webpack.config.react.js",
+    "dev": "webpack --mode development --watch --config=webpack.config.react.js"
+  },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.13",
-    "@fortawesome/free-brands-svg-icons": "^5.7.0",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.7.0",
-    "@fortawesome/vue-fontawesome": "^0.1.5",
-    "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0",
-    "@fullcalendar/interaction": "^4.3.0",
-    "@fullcalendar/luxon": "^4.3.0",
-    "@fullcalendar/moment": "^4.3.0",
-    "@fullcalendar/moment-timezone": "^4.3.0",
-    "@fullcalendar/timegrid": "^4.3.0",
-    "@fullcalendar/vue": "^4.3.1",
-    "@tinymce/tinymce-vue": "^2.1.0",
-    "axios": "^0.21.2",
-    "bootstrap": "^4.2.1",
-    "browser-info": "^1.2.0",
-    "calendar-js": "^1.4.4",
-    "copy-to-clipboard": "^3.2.0",
-    "jquery": "^3.4.1",
-    "js-cookie": "^2.2.0",
-    "libphonenumber-js": "^1.7.9",
-    "lodash": "^4.17.21",
-    "moment": "2.24.*",
-    "moment-timezone": "0.5.*",
-    "nouislider": "^11.1.0",
-    "replace-once": "^1.0.0",
-    "systemjs": "^3.1.6",
-    "tiptap": "^1.32.2",
-    "tiptap-extensions": "^1.35.2",
-    "validator": "^13.7.0",
-    "vue": "2.6.6",
-    "vue-click-outside": "^1.0.7",
-    "vue-color": "^2.7.0",
-    "vue-draggable-resizable": "^1.7.5",
-    "vue-range-slider": "^0.6.0",
-    "vue-router": "^3.1.3",
-    "vue-sanitize": "^0.2.1",
-    "vuedraggable": "^2.23.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-imports": "^1.5.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^2.0.2",
-    "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.1",
-    "css-loader": "^1.0.1",
-    "cypress": "^9.5.2",
-    "expect": "^23.6.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "path": "^0.12.7",
-    "sass-loader": "^10.5.2",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue-loader": "^15.6.2",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "2.6.6",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "webpack": "^4.36.1",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-manifest-plugin": "^2.0.4"
-  },
-  "scripts": {
-    "client:prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=webpack.config.general.js",
-    "client:dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.general.dev.js",
-    "client:watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --watch --watch-poll --config=webpack.config.general.dev.js",
-    "scss": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=webpack.config.scss.js",
-    "analyze": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.analyze.js",
-    "copy": "node_modules/webpack/bin/webpack.js --progress --config=webpack.config.copy.js",
-    "patch-vendors": "node apply-vendor-patches.js",
-    "build": "npm run patch-vendors && npm run scss && npm run copy && npm run client:prod",
-    "cypress:open": "cypress open"
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.22.0",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "repository": {
     "type": "git"
   },
-  "author": "",
+  "author": "Wappointment",
   "license": "GPLv2"
 }
