--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build:widget": "webpack --mode production --config=webpack.config.widget.js",
     "dev": "npm run routes && webpack --mode development --watch --config=webpack.config.react.js",
     "dev:widget": "webpack --mode development --watch --config=webpack.config.widget.js",
-    "routes": "php bin/generate-routes.php"
+    "routes": "php bin/generate-routes.php",
+    "test:build": "docker compose -f docker-compose.test.yml build",
+    "test:start": "docker compose -f docker-compose.test.yml up -d && docker compose -f docker-compose.test.yml exec test-runner composer install && docker compose -f docker-compose.test.yml exec wordpress /var/www/html/wp-content/plugins/wappointment/tests/docker/setup-test-user.sh",
+    "test:stop": "docker compose -f docker-compose.test.yml down",
+    "test:api": "docker compose -f docker-compose.test.yml exec test-runner vendor/bin/pest --group=api",
+    "test": "npm run test:api"
   },
   "dependencies": {
     "react": "^18.2.0",
