--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,8 +14,10 @@ services:
       - "3307:3306"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
+      interval: 2s
+      timeout: 3s
       retries: 10
+      start_period: 5s
 
   wordpress:
     build:
@@ -39,9 +41,10 @@ services:
       - "8080:80"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 2s
+      timeout: 3s
+      retries: 15
+      start_period: 10s
 
   test-runner:
     build:
