--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,20 @@ jobs:
       - name: Run API tests
         run: docker compose -f docker-compose.test.yml exec -T test-runner vendor/bin/pest --group=api
       
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+      
+      - name: Run E2E tests
+        run: npm run test:e2e
+      
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+      
       - name: Stop test environment
         if: always()
         run: npm run test:stop
